🎨 Improve layout and css

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                     <div class="image d-block d-md-none">
                         <img class="illustration" src="assets/images/benefit.png" alt="benefit">
                     </div>
-                    <a href="" class="btn btn-primary btn-lg btn-block">Dapatkan Disini</a>
+                    <a href="" class="btn btn-primary btn-lg btn-block d-md-block d-none">Dapatkan Disini</a>
                 </div>
                 <div class="col-md-6">
                     <div class="image d-md-block d-none">
@@ -195,6 +195,7 @@
                     </div>
                 </div>
             </div>
+            <a href="" class="btn btn-primary btn-lg btn-block d-block d-md-none">Dapatkan Disini</a>
         </section>
 
         <section class="join">
