Initial add copyright

--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@
     <title>RumahBarang</title>
     <link rel="shortcut icon" href="assets/images/icon.png" type="image/x-icon">
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
-        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
 
     <link rel="stylesheet" href="assets/css/custom.css">
 </head>
@@ -23,9 +21,7 @@
                 <img class="logo d-md-block d-none" src="assets/images/logo-long.png" alt="logo">
                 <img class="logo d-block d-md-none" src="assets/images/logo.png" alt="logo">
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -63,8 +59,7 @@
                         Mudahnya <span>Jualan Online</span> Tanpa Modal Dalam 1 Menit!
                     </h1>
                     <p class="description">
-                        Kamu hanya perlu duduk santai di rumah dan gunakan smartphone-mu, komisi mulai dari 20k sampai
-                        dengan 100k per produk, lho. kamu juga akan dipandu oleh tim sales berpengalaman.
+                        Kamu hanya perlu duduk santai di rumah dan gunakan smartphone-mu, komisi mulai dari 20k sampai dengan 100k per produk, lho. kamu juga akan dipandu oleh tim sales berpengalaman.
                     </p>
                     <div class="image d-block d-md-none">
                         <img class="illustration" src="assets/images/hero.png" alt="">
@@ -107,8 +102,7 @@
                         <div class="info">
                             <h4 class="title">Gratis Belajar Bisnis</h4>
                             <p>
-                                Pahami strategi jualan, teknik pemasaran, hingga cara promosi di media sosial dari
-                                trainer handal di Training Wirausaha.
+                                Pahami strategi jualan, teknik pemasaran, hingga cara promosi di media sosial dari trainer handal di Training Wirausaha.
                             </p>
                         </div>
                     </div>
@@ -185,8 +179,7 @@
                         <div class="card-body">
                             <img class="image" src="assets/images/benefit-money.png" alt="">
                             <p class="description">
-                                Ditambah lagi ada komisi Rp50.000 dari setiap Reseller yang bergabung dengan menggunakan
-                                Kode Referral (ID Reseller).
+                                Ditambah lagi ada komisi Rp50.000 dari setiap Reseller yang bergabung dengan menggunakan Kode Referral (ID Reseller).
                             </p>
                             <p class="description">
                                 Nb : Khusus Reseller Premium
@@ -218,8 +211,7 @@
                         Voucher Belanja Menarik
                     </h4>
                     <p class="description">
-                        Ada voucher total Rp300.000 yang dibagi menjadi 4 skema, dan berlaku hingga 4 bulan sejak
-                        bergabung.
+                        Ada voucher total Rp300.000 yang dibagi menjadi 4 skema, dan berlaku hingga 4 bulan sejak bergabung.
                     </p>
                 </div>
                 <div class="col-md-4">
@@ -246,8 +238,7 @@
                             HEADQUARTER
                         </h4>
                         <p class="address">
-                            Jl. Sebelas April No.92, Talun, Kec. Sumedang Utara, Kabupaten Sumedang, Jawa Barat 45621,
-                            Indonesia
+                            Jl. Sebelas April No.92, Talun, Kec. Sumedang Utara, Kabupaten Sumedang, Jawa Barat 45621, Indonesia
                         </p>
                     </div>
                 </div>
@@ -333,9 +324,13 @@
         </div>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
+    <div class="develop-by-febridk">
+        <a href="#" rel="nofollow">
+            <img style="width:220px" src="assets/images/febridk.svg">
+        </a>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 
 </html>
